Early setup done

--- a/hw/one.html
+++ b/hw/one.html
@@ -6,12 +6,26 @@
 
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="blogstyle.css">
 
-    <title>TCRE Blog | James Dawson</title>
+    <title>Week 1 | TCRE Blog | James Dawson</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 
   </head>
 
   <body>
-<h1>hello</h1>
-  </body>
+
+    <header> 
+      <h1>In The Begining All Was Black And White</h1>
+
+      <h2>Week 1 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; March 11</h2>
+      <div class="headerColour"></div>
+    </header>
+
+    <main> <br>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid et nostrum nulla hic eius earum assumenda voluptas temporibus vitae accusantium error ipsa quo dolorum exercitationem aperiam totam, repellat libero officia possimus adipisci nobis veritatis dolores? Exercitationem itaque dolore incidunt expedita reprehenderit aut consequuntur neque sit omnis? Excepturi odit, vero voluptas vel eius laudantium ut vitae. Sequi excepturi ea fugiat ut laborum quis magnam, eos vitae aliquam vero consequuntur minima sapiente. Eum asperiores saepe dolores debitis molestiae corporis, similique blanditiis quidem facilis voluptates hic eos delectus ea sed quo cumque libero natus deleniti, voluptatibus, dolorum cum eligendi! Quis nisi animi ut quo dicta consequuntur mollitia, commodi fugiat sed. Ratione eos quaerat, reprehenderit vero fugiat quibusdam quisquam voluptate maxime quis nostrum debitis, laborum ipsum dolores temporibus non ut sed omnis dicta maiores sint cum! Reiciendis deserunt est praesentium laborum, dicta, numquam labore dolores neque earum porro veritatis esse enim quaerat. Distinctio sunt nemo libero, corporis, veniam amet esse omnis vero sapiente atque ea error velit? In corporis mollitia, nemo vel, tenetur accusantium enim quisquam repellat laboriosam molestias neque ex deleniti beatae debitis, dolorum similique eaque. Repellendus inventore odio consequatur deleniti delectus magni ea minus voluptas! Cupiditate molestias voluptate est consequatur optio atque nesciunt neque harum, maxime unde explicabo tempora reprehenderit repudiandae odit error officia quae suscipit alias aliquid laboriosam quo voluptas nihil vitae provident? Magnam impedit praesentium eum cupiditate natus reiciendis ea soluta repudiandae laboriosam corrupti est saepe neque nulla recusandae assumenda, sed, distinctio quasi beatae alias ad unde reprehenderit possimus id. Incidunt nobis facilis quod fugiat recusandae, iusto repellat et magni eius eos ea sint accusamus numquam maxime, natus sequi amet ipsa nemo officia, iste architecto sunt ipsum perferendis! Obcaecati ipsum nisi cumque aperiam consequuntur, beatae commodi impedit dolore quo omnis. Consequuntur obcaecati nisi accusantium perferendis dolorum incidunt minima earum facere ut unde animi ab adipisci impedit, beatae quibusdam et excepturi, nam, iste eligendi. Doloremque deleniti nostrum maxime aspernatur vel fugiat! Animi omnis quos quis sint rem quia ratione facilis labore, alias id a nostrum explicabo placeat necessitatibus neque obcaecati corrupti, blanditiis fugiat. Saepe cupiditate numquam dolorum obcaecati et reiciendis ducimus? Nam illo voluptas nihil! Consequuntur reiciendis fugit molestias odio explicabo repudiandae architecto accusantium asperiores, tenetur, excepturi optio placeat? Consequuntur quod corporis placeat quo saepe recusandae obcaecati laboriosam est aliquam officiis, nesciunt totam repudiandae consequatur iusto incidunt dolorum adipisci fuga doloribus illo. Nobis reiciendis officia soluta at quam quasi dolor perspiciatis eum vel ut cumque, nesciunt, dolorem nisi, saepe incidunt esse! Nam ea saepe, repudiandae molestiae id aspernatur! Dolorum eveniet non soluta dolor accusantium quidem, magnam atque nisi harum eum quaerat sequi alias commodi totam, quam minus architecto sapiente maxime! Officiis sed vero, cumque est provident eveniet odit delectus, aliquam voluptatibus magnam non vel, sit facere? Aut esse error dolorum illo dicta soluta iusto magnam unde tenetur nemo ea ipsam, amet excepturi at minima iste eveniet, obcaecati, recusandae dolorem fugiat porro provident? Laudantium officiis voluptatibus, non modi eaque tempore obcaecati, facere labore magni fuga quaerat similique, recusandae blanditiis magnam id molestias!</p>
+    </main>
+  
