--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <script src="./filter.js" defer></script>
+    <script src="filter.js" defer></script>
 
     <title>TCRE Blog | James Dawson</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 
   </head>
 
@@ -37,20 +41,30 @@
     <!-- Week 1 -->
     <section class="BlogPost Homework"><a href="hw/one.html">
 
-      <span class="BlogTitle">Week 1</span>
+      <span class="BlogTitle">In The Begining All Was Black And White</span>
 
-      <div class="TagSection">     
-        <button class="TagButton">Homework</button>
-        <button class="TagButton">March 11</button>
-    </div>
+      <div class="TagSection"> 
+            <button class="TagButton">Week 1</button>    
+            <button class="TagButton">Homework</button>
+            <button class="TagButton">March 11</button>
+        </div>
       
-      <aside class="BlogImageContainer">
-
-        <img class="BlogImg" src="./images/week1.jpg" alt="Week 1 Thumbnail" />
-
-      </aside>
     </a>
     </section>
+
+    <!-- Week 2 -->
+    <section class="BlogPost Homework"><a href="hw/two.html">
+
+        <span class="BlogTitle">Week 2</span>
+  
+        <div class="TagSection"> 
+              <button class="TagButton">Week 2</button>    
+              <button class="TagButton">Homework</button>
+              <button class="TagButton">The Future</button>
+          </div>
+        
+      </a>
+      </section>
 
 </main>
 
