--- a/hw/one.html
+++ b/hw/one.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="blogstyle.css">
 
-    <title>Week 1 | TCRE Blog | James Dawson</title>
+    <title>Week 1.2 | TCRE Blog | James Dawson</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,11 +21,40 @@
     <header> 
       <h1>In The Begining All Was Black And White</h1>
 
-      <h2>Week 1 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; March 11</h2>
+      <h2>Week 1.2 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; March 11</h2>
       <div class="headerColour"></div>
     </header>
 
     <main> <br>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid et nostrum nulla hic eius earum assumenda voluptas temporibus vitae accusantium error ipsa quo dolorum exercitationem aperiam totam, repellat libero officia possimus adipisci nobis veritatis dolores? Exercitationem itaque dolore incidunt expedita reprehenderit aut consequuntur neque sit omnis? Excepturi odit, vero voluptas vel eius laudantium ut vitae. Sequi excepturi ea fugiat ut laborum quis magnam, eos vitae aliquam vero consequuntur minima sapiente. Eum asperiores saepe dolores debitis molestiae corporis, similique blanditiis quidem facilis voluptates hic eos delectus ea sed quo cumque libero natus deleniti, voluptatibus, dolorum cum eligendi! Quis nisi animi ut quo dicta consequuntur mollitia, commodi fugiat sed. Ratione eos quaerat, reprehenderit vero fugiat quibusdam quisquam voluptate maxime quis nostrum debitis, laborum ipsum dolores temporibus non ut sed omnis dicta maiores sint cum! Reiciendis deserunt est praesentium laborum, dicta, numquam labore dolores neque earum porro veritatis esse enim quaerat. Distinctio sunt nemo libero, corporis, veniam amet esse omnis vero sapiente atque ea error velit? In corporis mollitia, nemo vel, tenetur accusantium enim quisquam repellat laboriosam molestias neque ex deleniti beatae debitis, dolorum similique eaque. Repellendus inventore odio consequatur deleniti delectus magni ea minus voluptas! Cupiditate molestias voluptate est consequatur optio atque nesciunt neque harum, maxime unde explicabo tempora reprehenderit repudiandae odit error officia quae suscipit alias aliquid laboriosam quo voluptas nihil vitae provident? Magnam impedit praesentium eum cupiditate natus reiciendis ea soluta repudiandae laboriosam corrupti est saepe neque nulla recusandae assumenda, sed, distinctio quasi beatae alias ad unde reprehenderit possimus id. Incidunt nobis facilis quod fugiat recusandae, iusto repellat et magni eius eos ea sint accusamus numquam maxime, natus sequi amet ipsa nemo officia, iste architecto sunt ipsum perferendis! Obcaecati ipsum nisi cumque aperiam consequuntur, beatae commodi impedit dolore quo omnis. Consequuntur obcaecati nisi accusantium perferendis dolorum incidunt minima earum facere ut unde animi ab adipisci impedit, beatae quibusdam et excepturi, nam, iste eligendi. Doloremque deleniti nostrum maxime aspernatur vel fugiat! Animi omnis quos quis sint rem quia ratione facilis labore, alias id a nostrum explicabo placeat necessitatibus neque obcaecati corrupti, blanditiis fugiat. Saepe cupiditate numquam dolorum obcaecati et reiciendis ducimus? Nam illo voluptas nihil! Consequuntur reiciendis fugit molestias odio explicabo repudiandae architecto accusantium asperiores, tenetur, excepturi optio placeat? Consequuntur quod corporis placeat quo saepe recusandae obcaecati laboriosam est aliquam officiis, nesciunt totam repudiandae consequatur iusto incidunt dolorum adipisci fuga doloribus illo. Nobis reiciendis officia soluta at quam quasi dolor perspiciatis eum vel ut cumque, nesciunt, dolorem nisi, saepe incidunt esse! Nam ea saepe, repudiandae molestiae id aspernatur! Dolorum eveniet non soluta dolor accusantium quidem, magnam atque nisi harum eum quaerat sequi alias commodi totam, quam minus architecto sapiente maxime! Officiis sed vero, cumque est provident eveniet odit delectus, aliquam voluptatibus magnam non vel, sit facere? Aut esse error dolorum illo dicta soluta iusto magnam unde tenetur nemo ea ipsam, amet excepturi at minima iste eveniet, obcaecati, recusandae dolorem fugiat porro provident? Laudantium officiis voluptatibus, non modi eaque tempore obcaecati, facere labore magni fuga quaerat similique, recusandae blanditiis magnam id molestias!</p>
+      
+      <h3>MIT News: Unique visual stimulations may be the treatment for Alzheimer's</h3>
+      This article demonstrates how there has recently been a new development in curing Alzheimer's disease. There have been a few methods that they have found varied success in, but they all involve strobing lights at specific frequencies to stimulate particular areas of the brain using 'Gamma stimulation'. The biggest takeaway is that this is, first and foremost, a treatment rather than a preventative measure since many preventative measures can already reduce a patient's chance of receiving the disease. The second benefit is that the treatment doesn't involve any form of the patient taking any substances; instead, the lights stimulate the brain. However, this method would then exclude those sensitive to these forms of light (although you have people who are also allergic to medication, so there's never this "one cures all" method). While this is excellent progress, there have yet to be any human trials using this method; they have only tested this using mice. It'll be interesting to see if it will still work when testing on humans. However, based on the article reading, it seems safe to trial on humans.
+    
+      <br><br>
+      <h4>Key Takeaways</h4>
+      <ul>
+        <li>- There's a new method for treating Alzheimer's</li>
+        <li>- Uses strobing lights at specific frequencies to stimulate the brain</li>
+        <li>- Currently only testing on mice</li>
+      </ul>
+
+      <br>
+
+      <i>How well would this work for those who do suffer from light sensitivity?</i>
+
+      <br><br><br>
+      <h3>Affective resonance</h3>
+      This was a lot more challenging (and technical read) than the other article. However, the main idea that the author (Rainer Mühlhoff) conveyed was the idea that affective resonance is something that affects something else to put it into a different state, and in some cases, this can become a loop with object A affected object B, which then affects object A and so and so on. However, the author focuses on how it affects individuals in this article. It doesn't have to be explicitly things that happen right in front of them. If they experience something within the digital world (or the "social medium", as the author puts it), that can also have an affective resonance on them. By experiencing these reactions through this medium, a more extensive range of individuals experience it. Still, the actual response will generally remain the same (however, the more significant the range, the more chance that cultural differences will create a different resonance).
+      <br><br>
+      <ul>
+        <li>- Affective resonance is when something reacts to something else</li>
+        <li>- Can loop back on each other and continuously react back and forth</li>
+        <li>- Resonance can occur through social mediums, just has a larger range</li>
+      </ul>
+
+      <nav>
+        <button class="NavButton"><a href="/index.html"><div class="hitbox">Home</div></a></button>
+        <button class="NavButton"><a href="two.html"><div class="hitbox">Next</div></a></button>
+      </nav>
     </main>
   
