A few week 1 patches

--- a/hw/one.html
+++ b/hw/one.html
@@ -19,7 +19,7 @@
   <body>
 
     <header> 
-      <h1>In The Begining All Was Black And White</h1>
+      <h1>I'll Light Up Your World</h1>
 
       <h2>Week 1.2 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; March 11</h2>
       <div class="headerColour"></div>
@@ -46,11 +46,15 @@
       <h3>Affective resonance</h3>
       This was a lot more challenging (and technical read) than the other article. However, the main idea that the author (Rainer Mühlhoff) conveyed was the idea that affective resonance is something that affects something else to put it into a different state, and in some cases, this can become a loop with object A affected object B, which then affects object A and so and so on. However, the author focuses on how it affects individuals in this article. It doesn't have to be explicitly things that happen right in front of them. If they experience something within the digital world (or the "social medium", as the author puts it), that can also have an affective resonance on them. By experiencing these reactions through this medium, a more extensive range of individuals experience it. Still, the actual response will generally remain the same (however, the more significant the range, the more chance that cultural differences will create a different resonance).
       <br><br>
+      <h4>Key Takeaways</h4>
       <ul>
         <li>- Affective resonance is when something reacts to something else</li>
         <li>- Can loop back on each other and continuously react back and forth</li>
         <li>- Resonance can occur through social mediums, just has a larger range</li>
       </ul>
+      <br>
+
+      <i>How much would the resonance of something change depending on the culural context of the reciever?</i>
 
       <nav>
         <button class="NavButton"><a href="/index.html"><div class="hitbox">Home</div></a></button>
