--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <main>
 
     <section class="Splash">
-       <div class="slide-in-bck-center"><h1>HI!</h1></div>
+       <!-- <div class="slide-in-bck-center"><h1>HI!</h1></div> -->
        <br>
-       <h2>I'm James</h2>
+       <h2>Hi there, I'm James (s3898709)</h2>
        
        <p>design still to be finished, navigate using the tags in the top left</p>
 
@@ -45,7 +45,7 @@
     <!-- Week 1 -->
     <section class="BlogPost Homework"><a href="hw/one.html">
 
-      <span class="BlogTitle">In The Begining All Was Black And White</span>
+      <span class="BlogTitle">I'll Light Up Your World</span>
 
       <div class="TagSection"> 
             <button class="TagButton">Week 1.2</button>    
