--- a/hw/one.html
+++ b/hw/one.html
@@ -57,7 +57,7 @@
       <i>How much would the resonance of something change depending on the culural context of the reciever?</i>
 
       <nav>
-        <button class="NavButton"><a href="/index.html"><div class="hitbox">Home</div></a></button>
+        <button class="NavButton"><a href="https://djam98.github.io/TCRE-Blog/"><div class="hitbox">Home</div></a></button>
         <button class="NavButton"><a href="two.html"><div class="hitbox">Next</div></a></button>
       </nav>
     </main>
