--- a/hw/boilerplate.html
+++ b/hw/boilerplate.html
@@ -36,8 +36,8 @@
       </ul>
 
  <nav>
-        <button class="NavButton"><a href="/index.html"><div class="hitbox">Back</div></a></button>
-        <button class="NavButton"><a href="/index.html"><div class="hitbox">Home</div></a></button>
+        <button class="NavButton"><a href="one.html"><div class="hitbox">Back</div></a></button>
+        <button class="NavButton"><a href="https://djam98.github.io/TCRE-Blog/"><div class="hitbox">Home</div></a></button>
         <button class="NavButton"><a href="two.html"><div class="hitbox">Next</div></a></button>
       </nav>
     </main>
