Class Blog Reviews

--- a/hw/one.html
+++ b/hw/one.html
@@ -54,7 +54,7 @@
       </ul>
       <br>
 
-      <i>How much would the resonance of something change depending on the culural context of the reciever?</i>
+      <i>How much would the resonance of something change depending on the cultural context of the reciever?</i>
 
       <nav>
         <button class="NavButton"><a href="https://djam98.github.io/TCRE-Blog/"><div class="hitbox">Home</div></a></button>
