--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div class="FilterSection">     
 
         <button class="FilterButton" onclick='filterCategory("Homework", this)'>Homework</button>
+        <button class="FilterButton" onclick='filterCategory("Review", this)'>Class Reviews</button>
         <button class="FilterButton" onclick='filterCategory("A1", this)'>Assignment 1</button>
         <button class="FilterButton" onclick='filterCategory("A2", this)'>Assignment 2</button>
         <button class="FilterButton" onclick='filterCategory("A3", this)'>Assignment 3</button>
@@ -55,6 +56,20 @@
       
     </a>
     </section>
+
+    <!-- Week 1 Review -->
+    <section class="BlogPost Review"><a href="review/one.html">
+
+        <span class="BlogTitle">Back to Square One</span>
+  
+        <div class="TagSection"> 
+              <button class="TagButton">Review on Week 1.2</button>    
+              <button class="TagButton">Class Review</button>
+              <button class="TagButton">March 12</button>
+          </div>
+        
+      </a>
+      </section>
 
     <!-- Week 2 -->
     <section class="BlogPost Homework"><a href="hw/two.html">
