Get ready for 2.2

--- a/hw/two.html
+++ b/hw/two.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="blogstyle.css">
 
-    <title>Week 2 | TCRE Blog | James Dawson</title>
+    <title>Week 2.1 | TCRE Blog | James Dawson</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,13 +19,25 @@
   <body>
 
     <header> 
-      <h1>You're Early</h1>
+      <h1>Seeing Colour in Black and White</h1>
 
-      <h2>Week 2 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; TBD</h2>
+      <h2>Week 2.1 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; March 13</h2>
       <div class="headerColour"></div>
     </header>
 
     <main> <br>
-        <p></p>
+      
+      <h3>Qualia</h3>
+      In the most basic forms, qualia are almost how we consciously depict or perceive something by association, but it is more often than not about colour. For example, lighter shades of green, blue and pink are frequently seen as generally either 'soft' or 'cute'. While the experience is usually shared (particularly when the two parties have the same cultural background), it can also vary for each individual since it's all about how you perceive it, which is very personal.
+      
+      <br><br>
+      <h3>Valence</h3>
+      Valence is quite similar to qualia in that it happens within the mental realm. The key difference is that qualia is more related to association, while valance is more about how you feel about a certain thing. Using the same example as above, light greens, blues, and pinks would often be seen as a 'safe' space. Valence is also a way of breaking down things into black and white by how 'good' or 'bad' something seems.
+
+ <nav>
+        <button class="NavButton"><a href="one.html"><div class="hitbox">Back</div></a></button>
+        <button class="NavButton"><a href="https://djam98.github.io/TCRE-Blog/"><div class="hitbox">Home</div></a></button>
+        <button class="NavButton"><a href="two.html"><div class="hitbox">Next</div></a></button>
+      </nav>
     </main>
   
