--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
       </a>
       </section>
 
-      <section class="BlogPost Homework A1 A2 A3" style=" display: none; flex-direction: column; border-radius: 5px; padding: 10px; margin-top: 1em; background-color: #A855F7; gap: 0.ßem; width: 700px;
+      <section class="BlogPost Homework A1 A2 A3 Review" style=" display: none; flex-direction: column; border-radius: 5px; padding: 10px; margin-top: 1em; background-color: #A855F7; gap: 0.ßem; width: 700px;
+      box-shadow: none;"></section>
+      <section class="BlogPost Homework A1 A2 A3 Review" style=" display: none; flex-direction: column; border-radius: 5px; padding: 10px; margin-top: 1em; background-color: #A855F7; gap: 0.ßem; width: 700px;
       box-shadow: none;"></section>
 
 </main>
