--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
           Homework
         </button>
 
-        <button class="About SplashStyle">
-          <h2>Hi there, I'm James (s3898709)</h2>
-        </button>
+       <button class="About SplashStyle"> <a href="/about.html">
+          <div class="max"><p class="hi">Hi there, I'm James (s3898709)<br><br>Yeah still playing with the design<br> of this page, didn't work out the way I wanted it to</p></div>
+        </a> </button>
 
         <button class="ReviewSplash SplashStyle" onclick='filterCategory("Review", this)'>
           Class Review
