--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           Homework
         </button>
 
-       <button class="About SplashStyle"> <a href="/about.html">
+       <button class="About SplashStyle"> <a href="about.html">
           <div class="max"><p class="hi">Hi there, I'm James (s3898709)<br><br>Yeah still playing with the design<br> of this page, didn't work out the way I wanted it to</p></div>
         </a> </button>
 
