--- a/hw/two.html
+++ b/hw/two.html
@@ -37,7 +37,7 @@
  <nav>
         <button class="NavButton"><a href="one.html"><div class="hitbox">Back</div></a></button>
         <button class="NavButton"><a href="https://djam98.github.io/TCRE-Blog/"><div class="hitbox">Home</div></a></button>
-        <button class="NavButton"><a href="two.html"><div class="hitbox">Next</div></a></button>
+        <button class="NavButton"><a href="three.html"><div class="hitbox">Next</div></a></button>
       </nav>
     </main>
   
