--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </a>
         </section>
 
-      <!-- Week 2 -->
+      <!-- Week 2.1 -->
       <section class="BlogPost BlogPostContainer Homework A1"><a href="hw/two.html">
 
           <span class="BlogTitle">Seeing Colour in Black and White</span>
@@ -125,6 +125,21 @@
           
         </a>
         </section>
+
+              <!-- Week 2.2 -->
+      <section class="BlogPost BlogPostContainer Homework A1"><a href="hw/two.html">
+
+        <span class="BlogTitle">It Starts With A Title</span>
+  
+        <div class="TagSection"> 
+              <button class="TagButton">Week 2.2</button>    
+              <button class="TagButton">Homework</button>
+              <button class="TagButton">Assignment 1</button>
+              <button class="TagButton">March 18</button>
+          </div>
+        
+      </a>
+      </section>
 
         <section class="BlogPost BlogPostContainer Homework A1 A2 A3 Review" style=" display: none; flex-direction: column; border-radius: 5px; padding: 10px; margin-top: 1em; background-color: #A855F7; gap: 0.ßem; width: 700px;
         box-shadow: none;"></section>
