--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </section>
 
               <!-- Week 2.2 -->
-      <section class="BlogPost BlogPostContainer Homework A1"><a href="hw/two.html">
+      <section class="BlogPost BlogPostContainer Homework A1"><a href="hw/three.html">
 
         <span class="BlogTitle">It Starts With A Title</span>
   
