--- a/hw/three.html
+++ b/hw/three.html
@@ -55,8 +55,13 @@
         Something else that could be pretty interesting to explore is that people can also have voluntary control over their piloerections.
 <br><br>
         <h3>Gaming</h3>
-        <i>Arriving Thursday (yeah I know sorry)</i>
-      <nav>
+        The two games I got to play with colour were quite interesting for a different way of experiencing colour (to note, "What In Colour" wasn't working for me as the CSS wouldn't load on the site). The first one I tried was the Color Game (results below). This was interesting as I often tried to find the closest association. Particularly when multiple colours started appearing, I was confused about where to look (which resulted in a temporary reduction of the score when that was introduced). However, something that pointed out to me was that when it's unclear due to the clash of unorganised colours, it can be disorientating and confusing as a viewer, which I'll need to consider when designing my works later.
+       <br> <img src="img/colorgame.png"><br>
+
+        The other game was the Adobe Colour Game. In this game, though, I wasn't associating the changes on screen with any colour; instead, I just memorised the location of the missing shapes. Because of this, there wasn't much to take from this other than the fact that the user disregards it if the colour has no association with the material.
+  <br>
+<img src="img/adobecolor.png"><br>
+<nav>
         <button class="NavButton"><a href="two.html"><div class="hitbox">Back</div></a></button>
         <button class="NavButton"><a href="https://djam98.github.io/TCRE-Blog/"><div class="hitbox">Home</div></a></button>
         <button class="NavButton"><a href="three.html"><div class="hitbox">Next</div></a></button>
