--- a/a1/two.html
+++ b/a1/two.html
@@ -45,9 +45,9 @@
         <li>The ideal future of colour is hopefully moving towards CIELAB</li>
        </ul>
  <nav>
-        <button class="NavButton"><a href="https://djam98.github.io/TCRE-Blog/hw/one.html"><div class="hitbox">Week 1.2 Homework</div></a></button>
-        <button class="NavButton"><a href="https://djam98.github.io/TCRE-Blog/"><div class="hitbox">Home</div></a></button>
-        <button class="NavButton"><a href="two.html"><div class="hitbox">Next</div></a></button>
+        <button class="NavButton"><a href="/hw/one.html"><div class="hitbox">Week 1.2 Homework</div></a></button>
+        <button class="NavButton"><a href="/index.html"><div class="hitbox">Home</div></a></button>
+        <button class="NavButton"><a href="/hw/two.html"><div class="hitbox">Next</div></a></button>
       </nav>
     </main>
   
