--- a/hw/three.html
+++ b/hw/three.html
@@ -62,9 +62,9 @@
   <br>
 <img src="img/adobecolor.png"><br>
 <nav>
-        <button class="NavButton"><a href="two.html"><div class="hitbox">Back</div></a></button>
-        <button class="NavButton"><a href="https://djam98.github.io/TCRE-Blog/"><div class="hitbox">Home</div></a></button>
-        <button class="NavButton"><a href="three.html"><div class="hitbox">Next</div></a></button>
+        <button class="NavButton"><a href="/hw/two.html"><div class="hitbox">Back</div></a></button>
+        <button class="NavButton"><a href="/index.html"><div class="hitbox">Home</div></a></button>
+        <button class="NavButton"><a href="/hw/three.html"><div class="hitbox">Next</div></a></button>
       </nav>
     </main>
   
