--- a/hw/two.html
+++ b/hw/two.html
@@ -35,9 +35,9 @@
       Valence is quite similar to qualia in that it happens within the mental realm. The key difference is that qualia is more related to association, while valance is more about how you feel about a certain thing. Using the same example as above, light greens, blues, and pinks would often be seen as a 'safe' space. Valence is also a way of breaking down things into black and white by how 'good' or 'bad' something seems.
 
  <nav>
-        <button class="NavButton"><a href="one.html"><div class="hitbox">Back</div></a></button>
-        <button class="NavButton"><a href="https://djam98.github.io/TCRE-Blog/"><div class="hitbox">Home</div></a></button>
-        <button class="NavButton"><a href="three.html"><div class="hitbox">Next</div></a></button>
+        <button class="NavButton"><a href="/hw/one.html"><div class="hitbox">Back</div></a></button>
+        <button class="NavButton"><a href="/index"><div class="hitbox">Home</div></a></button>
+        <button class="NavButton"><a href="/hw/three.html"><div class="hitbox">Next</div></a></button>
       </nav>
     </main>
   
