--- a/review/one.html
+++ b/review/one.html
@@ -48,9 +48,8 @@
         Cameron's main interpretation of the text was that Affective Resonance can be observed in many different forms. Similarly to Sachi, Cameron also noted that the solar system interaction and rotations are just a grander version of Affective resonance. 
 
  <nav>
-        <button class="NavButton"><a href="https://djam98.github.io/TCRE-Blog/hw/one.html"><div class="hitbox">Week 1.2 Homework</div></a></button>
-        <button class="NavButton"><a href="https://djam98.github.io/TCRE-Blog/"><div class="hitbox">Home</div></a></button>
-        <button class="NavButton"><a href="two.html"><div class="hitbox">Next</div></a></button>
+        <button class="NavButton"><a href="/hw/one.html"><div class="hitbox">Week 1.2 Homework</div></a></button>
+        <button class="NavButton"><a href="/index.html"><div class="hitbox">Home</div></a></button>
       </nav>
     </main>
   
