--- a/about.html
+++ b/about.html
@@ -28,12 +28,12 @@
           &nbsp;
         </button>
 
-        <button class="About SplashStyle">
+        <button class="About SplashStyle" style="background-image: none;">
           <h2>About Me</h2>
         </button>
 
         <button class="Bio SplashStyle">
-          <p style="text-align: right;">Bio coming soon</p>
+          <p style="text-align: right; padding: 0; margin: 0;">Hi there, I'm James. My main focus within digital media is<br>designing for online video production. Generally, this is<br>within competitve enviornments but it also includes things<br>like content creator stream packages or even items like TV sports<br>broadcast graphics. Beyond that, I still also have a large focus<br>in post-video production, graphic design and sound production.<br><br>Hope to see you around!</p>
         </button>
 
         <div class="break"></div>
