--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </button>
 
        <button class="About SplashStyle"> <a href="about.html">
-          <div class="max"><p class="hi">Hi there, I'm James (s3898709)<br><br>Yeah still playing with the design<br> of this page, didn't work out the way I wanted it to</p></div>
+          <div class="max"><p class="hi">Hi there, I'm James</p>
         </a> </button>
 
         <button class="ReviewSplash SplashStyle" onclick='filterCategory("Review", this)'>
@@ -53,15 +53,15 @@
         <div class="break2"><p>&nbsp;</p>
         </div>
 
-        <button class="Assignment SplashStyle" onclick='filterCategory("A1", this)'>
+        <button class="Assignment SplashStyle one" onclick='filterCategory("A1", this)'>
           A1
         </button>
 
-        <button class="Assignment SplashStyle" onclick='filterCategory("A2", this)'>
+        <button class="Assignment SplashStyle two" onclick='filterCategory("A2", this)'>
           A2
         </button>
 
-        <button class="Assignment SplashStyle" onclick='filterCategory("A3", this)'>
+        <button class="Assignment SplashStyle three" onclick='filterCategory("A3", this)'>
           A3
         </button>
       
