--- a/index.html
+++ b/index.html
@@ -141,6 +141,21 @@
       </a>
       </section>
 
+                    <!-- Week 5.1 -->
+      <section class="BlogPost BlogPostContainer Homework A2"><a href="hw/five.html">
+
+        <span class="BlogTitle">A Shift In Tone</span>
+  
+        <div class="TagSection"> 
+              <button class="TagButton">Week 5.1</button>    
+              <button class="TagButton">Homework</button>
+              <button class="TagButton">Assignment 2</button>
+              <button class="TagButton">April 10</button>
+          </div>
+        
+      </a>
+      </section>
+
         <section class="BlogPost BlogPostContainer Homework A1 A2 A3 Review" style=" display: none; flex-direction: column; border-radius: 5px; padding: 10px; margin-top: 1em; background-color: #A855F7; gap: 0.ßem; width: 700px;
         box-shadow: none;"></section>
         <section class="BlogPost BlogPostContainer Homework A1 A2 A3 Review" style=" display: none; flex-direction: column; border-radius: 5px; padding: 10px; margin-top: 1em; background-color: #A855F7; gap: 0.ßem; width: 700px;
