push the button

--- a/hw/five.html
+++ b/hw/five.html
@@ -45,9 +45,9 @@ Now, I wanted to change pace drastically. This sound is almost 180 from the prev
 <audio controls src="audio/VitalExp4.mp3" type="audio/mpeg">Vital Experiment 4</audio><br>
 In this experiment, I wanted to try out a bass sound. While I immensely enjoy the depth of this sound, I'm not a huge fan of the attack. Because of this, I actually held the notes rather than releasing each note, as this removed the attack part I didn't like. However, I really enjoy the rest of the sound due to how deep this sound is.
 <nav>
-        <button class="NavButton"><a href="/hw/two.html"><div class="hitbox">Back</div></a></button>
+        <button class="NavButton"><a href="/hw/four.html"><div class="hitbox">Back</div></a></button>
         <button class="NavButton"><a href="/index.html"><div class="hitbox">Home</div></a></button>
-        <button class="NavButton"><a href="/hw/three.html"><div class="hitbox">Next</div></a></button>
+        <button class="NavButton"><a href="/hw/six.html"><div class="hitbox">Next</div></a></button>
       </nav>
     </main>
   
