--- a/hw/three.html
+++ b/hw/three.html
@@ -64,7 +64,7 @@
 <nav>
         <button class="NavButton"><a href="/hw/two.html"><div class="hitbox">Back</div></a></button>
         <button class="NavButton"><a href="/index.html"><div class="hitbox">Home</div></a></button>
-        <button class="NavButton"><a href="/hw/three.html"><div class="hitbox">Next</div></a></button>
+        <button class="NavButton"><a href="/hw/four.html"><div class="hitbox">Next</div></a></button>
       </nav>
     </main>
   
