--- a/hw/five.html
+++ b/hw/five.html
@@ -47,7 +47,7 @@ In this experiment, I wanted to try out a bass sound. While I immensely enjoy th
 <nav>
         <button class="NavButton"><a href="/hw/four.html"><div class="hitbox">Back</div></a></button>
         <button class="NavButton"><a href="/index.html"><div class="hitbox">Home</div></a></button>
-        <button class="NavButton"><a href="/hw/six.html"><div class="hitbox">Next</div></a></button>
+        <button class="NavButton"><a href="/a2/one.html"><div class="hitbox">Next</div></a></button>
       </nav>
     </main>
   
