--- a/index.html
+++ b/index.html
@@ -197,6 +197,19 @@
                 </a>
                 </section>
 
+                <!-- A3.2-->
+                <section class="BlogPost BlogPostContainer A3"><a href="a3/one.html">
+
+                  <span class="BlogTitle">It Starts Here (literally)</span>
+        
+                  <div class="TagSection">   
+                        <button class="TagButton">Assignment 3</button>
+                        <button class="TagButton">May 13</button>
+                    </div>
+                  
+                </a>
+                </section>
+
         <section class="BlogPost BlogPostContainer Homework A1 A2 A3 Review" style=" display: none; flex-direction: column; border-radius: 5px; padding: 10px; margin-top: 1em; background-color: #A855F7; gap: 0.ßem; width: 700px;
         box-shadow: none;"></section>
         <section class="BlogPost BlogPostContainer Homework A1 A2 A3 Review" style=" display: none; flex-direction: column; border-radius: 5px; padding: 10px; margin-top: 1em; background-color: #A855F7; gap: 0.ßem; width: 700px;
